# diffusion-desk

./: .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  BUILD_FIX.md  CMakeLists.txt  DB_DESIGN.md  DEV_JOURNAL.md  GPU_FIX_PROGRESS.md  LICENSE  LLM_INTEGRATION_PLAN.md  README.md  TEST.md  build.gradle.kts  config.default.json  config.json  gemini.md  gradle.properties  settings.gradle.kts
.github/workflows/: windows-release.yml
cmake/: PrepareStableDiffusion.cmake
cmake/sd-worker/: CMakeLists.txt
composeApp/: build.gradle.kts
composeApp/src/commonMain/kotlin/com/diffusiondesk/desktop/theme/: Theme.kt
composeApp/src/desktopMain/kotlin/com/diffusiondesk/desktop/: App.kt  AppController.kt  main.kt
composeApp/src/desktopMain/kotlin/com/diffusiondesk/desktop/composition/: CompositionActionExecutor.kt  StagedIdeogramGenerator.kt
composeApp/src/desktopMain/kotlin/com/diffusiondesk/desktop/core/: AppPaths.kt  AssistantToolRegistry.kt  BackendManager.kt  CommandLineArgs.kt  DesktopSettings.kt  DesktopSettingsStore.kt  DiffusionDeskClient.kt  GalleryDatabase.kt  GalleryMetadataParser.kt  GalleryModels.kt  GalleryRepository.kt  GenerationSettingsStore.kt  Ideogram4PromptSchema.kt  ImagePreset.kt  ImagePresetStore.kt  ImageTaggingService.kt  LlmDebugLog.kt  LlmPreset.kt  LlmPresetStore.kt  LlmRoleService.kt  LlmWorkerPool.kt  NotificationCenter.kt
composeApp/src/desktopMain/kotlin/com/diffusiondesk/desktop/screens/: AssistantPanel.kt  CompositionCanvasGeometry.kt  DeskControls.kt  GalleryScreen.kt  GenerateScreen.kt  IdeogramScreen.kt  ImageContextMenu.kt  LibraryScreen.kt  NotificationStack.kt  PresetEditorFields.kt  SettingsScreen.kt  SetupScreen.kt  SystemScreen.kt  UpscaleScreen.kt
composeApp/src/desktopMain/kotlin/com/diffusiondesk/desktop/viewmodel/: AssistantViewModel.kt  GalleryViewModel.kt  GenerationViewModel.kt  IdeogramCompositionDocument.kt  LibraryViewModel.kt  (+3 more)
docs/: ARCHITECTURAL_REVIEW.md  COMPOSE_BLUEPRINT_DIFF.md  COMPOSE_DESKTOP_MIGRATION_PLAN.md  DEVELOPMENT_PLAN.md  GEMINI.md  IDEOGRAM4_COMPOSITION_ASSISTANT_PLAN.md  IDEOGRAM4_IMAGE_CAPTURE_WORKFLOW_PLAN.md  INTEGRATION_PLAN.md  ISLANDS_DESIGN.md  LEGACY_WEBUI_README.md  RUNTIME_MEMORY_NOTES.md  VRAM_MANAGEMENT.md  VRAM_MANAGEMENT_PLAN.md  compose-llm-worker-support-spec.md  comprehensive_architecture_and_db_plan.md  gemini.md  ideogram4-performance-benchmark.md
docs/archive/: ARCHITECTURAL_REVIEW.md  BUILD_FIX.md  ChatGPT_Database_Suggestions.md  DEBUG_PLAN.md  DEV_JOURNAL.md  INTEGRATION_PLAN.md  LLM_INTEGRATION_PLAN.md  PARALLELIZATION_ISSUE.md  PROGRESS_REPORT_PARALLELIZATION.md  VRAM_MANAGEMENT.md  chatgpt_response.md  database_design.md  gemini_pro_consultation.md  ideas.md
gradle/: libs.versions.toml
public/: index.html
public/app/: index.html
public/app/assets/: index-CZKVo7kL.js  index-DXHySnJ8.js  index-ETmkrsH1.css
public/assets/: index-AwoiI1WZ.css  index-B5YQqsHE.js  index-B6E6KP8Z.css  index-BPeP-SKl.js  index-BkDyOYBV.js  index-Bpt2Wdz4.css  index-BsT4bfpq.js  index-CDS8moRx.css  index-CLO6EbIA.css  index-CjYWVgbT.js  index-Cpdbj63f.js  index-CqM60fvs.js  index-CslUzcqU.css  index-CwZ5Tjuv.js  index-D6OWB9NL.css  index-DPwbl1qv.css  index-DdJr9ko_.js  index-Ip5-WsCm.js  index-Tgfqg4gU.css  index-US-5LXTw.js
scripts/: build.ps1  build.sh  compare_generations.sh  package-linux.sh  package-windows.ps1  run-compose-hot-reload.ps1  run-compose.ps1  run-compose.sh  run.ps1  run.sh  test_b0_retry.ps1  test_db.ps1  test_grey_image_retry.sh  test_happy_path.ps1  test_server_max_res.sh  test_vram_arbitration.ps1  test_vram_arbitration.sh  test_vram_curve.ps1  verify_release_a.ps1  verify_routing.ps1
scripts/patches/: stable-diffusion-cancel.patch
scripts/tests/: benchmark_ideogram4.ps1  compare_generations.sh  test_b0_retry.ps1  test_db.ps1  test_db.sh  test_grey_image_retry.sh  test_happy_path.ps1  test_llm.ps1  test_llm.sh  test_max_res.sh  test_presets.ps1  test_server_max_res.sh  test_vram_arbitration.ps1  test_vram_arbitration.sh  test_vram_curve.ps1  verify_release_a.ps1  verify_routing.ps1
scripts/tests/patches/: comfyui-gguf-ideogram4.patch
scripts/tests/workflows/: ideogram4-gguf-api.json
src/: main.cpp  main_llm.cpp  main_orchestrator.cpp  main_sd.cpp  stb_image_writer.cpp
src/orchestrator/: database.cpp  database.hpp  orchestrator_main.cpp  orchestrator_main.hpp  process_manager.cpp  process_manager.hpp  proxy.cpp  proxy.hpp  ws_manager.cpp  ws_manager.hpp
src/orchestrator/services/: health_service.cpp  health_service.hpp  import_service.cpp  import_service.hpp  job_service.cpp  job_service.hpp  resource_manager.cpp  resource_manager.hpp  service_controller.cpp  service_controller.hpp  tagging_service.cpp  tagging_service.hpp  thumbnail_service.cpp  thumbnail_service.hpp  tool_service.cpp  tool_service.hpp
src/sd/: api_endpoints.cpp  api_endpoints.hpp  api_utils.cpp  api_utils.hpp  model_loader.cpp  model_loader.hpp  server_state.cpp  server_state.hpp
src/server/: llama_server.cpp  llama_server.hpp
src/utils/: common.cpp  common.hpp  llm_common.hpp  sd_common.cpp  sd_common.hpp
src/workers/: llm_worker.cpp  llm_worker.hpp  sd_worker.cpp  sd_worker.hpp
webui/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
webui/src/: App.vue  bootstrap.d.ts  constants.ts  islands.css  main.ts  style.css
webui/src/components/: AssistantPanel.vue  CondensedGenerationForm.vue  DeleteConfirmationModal.vue  FloatingActionBar.vue  GenerationForm.vue  GenerationProgress.vue  ImageDisplay.vue  ImageGallery.vue  ImagePresetEditor.vue  InpaintingCanvas.vue  LlmPresetEditor.vue  LoraManager.vue  ModelSelector.vue  RatingInput.vue  SetupWizard.vue  Sidebar.vue  VramIndicator.vue
webui/src/router/: index.ts
webui/src/services/: mutation-builder.ts
webui/src/stores/: assistant.ts  exploration.ts  generation.ts  image.ts
webui/src/views/: ExplorationView.vue  GalleryView.vue  HistoryView.vue  ImageToImageView.vue  InpaintingView.vue  ManagerView.vue  SettingsView.vue  TextToImageView.vue  UpscaleView.vue  VisionDebugView.vue
(+15 files in other folders)
